src/test/kalang-snippets/error/BreakError.kl
break outside of loop@2
void test() {
    break;
}